--- a/app/src/main/res/layout/activity_libro_formulario_crud.xml
+++ b/app/src/main/res/layout/activity_libro_formulario_crud.xml
@@ -7,15 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".LibroFormularioCrudActivity">
 
-
+    <!-- ScrollView para permitir desplazamiento si el contenido es demasiado grande -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <!-- LinearLayoutCompat vertical para organizar los elementos de manera lineal -->
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- TextView para el título de la página -->
             <TextView
                 android:id="@+id/idTitlePage"
                 android:layout_width="match_parent"
@@ -27,6 +30,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+            <!-- TextView y EditText para el título del libro -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,7 +38,6 @@
                 android:padding="3dp"
                 android:text="Titulo"
                 android:textAlignment="center" />
-
             <EditText
                 android:id="@+id/txtRegLibTitulo"
                 android:layout_width="match_parent"
@@ -42,6 +45,7 @@
                 android:layout_margin="3dp"
                 android:padding="3dp" />
 
+            <!-- TextView y EditText para el año del libro -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,7 +53,6 @@
                 android:padding="3dp"
                 android:text="Anio"
                 android:textAlignment="center" />
-
             <EditText
                 android:id="@+id/txtRegLibAnio"
                 android:layout_width="match_parent"
@@ -57,6 +60,7 @@
                 android:layout_margin="3dp"
                 android:padding="3dp" />
 
+            <!-- TextView y EditText para la serie del libro -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -64,7 +68,6 @@
                 android:padding="3dp"
                 android:text="Serie"
                 android:textAlignment="center" />
-
             <EditText
                 android:id="@+id/txtRegLibSerie"
                 android:layout_width="match_parent"
@@ -72,6 +75,7 @@
                 android:layout_margin="3dp"
                 android:padding="3dp" />
 
+            <!-- TextView para el país del libro y Spinner para seleccionar el país -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -84,9 +88,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
                 android:padding="3dp"
-                android:minHeight="48dp"
-                />
+                android:minHeight="48dp" />
 
+            <!-- TextView para la categoría del libro y Spinner para seleccionar la categoría -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,9 +103,32 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
                 android:padding="3dp"
-                android:minHeight="48dp"
-                />
+                android:minHeight="48dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:padding="3dp"
+                android:text="Estado" />
+
+            <RadioGroup
+                android:id="@+id/grpEstado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton android:id="@+id/rbtActivo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Activo"/>
+                <RadioButton android:id="@+id/rbtInactivo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inactivo"/>
+            </RadioGroup>
+
+            <!-- Botones para enviar y regresar -->
             <Button
                 android:id="@+id/btnRegLibEnviar"
                 android:layout_width="match_parent"
@@ -109,7 +136,6 @@
                 android:layout_margin="3dp"
                 android:padding="3dp"
                 android:text="Registrar" />
-
             <Button
                 android:id="@+id/btnRegLibRegresar"
                 android:layout_width="match_parent"
@@ -118,12 +144,8 @@
                 android:padding="3dp"
                 android:text="Regresar" />
 
-
-
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </ScrollView>
-
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
